--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="dist/shaka-player.compiled.js"></script>
+    <script src="shaka-player.compiled.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
